--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html lang='en'>
 <html>
 
 <head>
@@ -18,6 +18,8 @@
     .loading-container {
       height: 100vh;
       width: 100vw;
+      max-width: 100vw;
+      max-height: 100vh;
       background: white;
       display: flex;
       justify-content: center;
